--- a/config/config.yml
+++ b/config/config.yml
@@ -7,10 +7,15 @@ github:
   # Filename for the JSON file in the `output` directory
   output: "repo_data.json"
 
+community:
+  # Open Slack invite link for the community
+  slack: "https://join.slack.com/t/bloodhoundhq/shared_invite/zt-1tgq6ojd2-ixpx5nz9Wjtbhc3i8AVAWw"
+
 # MarkDown-formatted text to be added to the README.md file
 # Use `>` to write a multi-line string and use two blank lines to signify a new paragraph for MarkDown
 copy:
-  banner: "img/specterops-banner.jpg"
+  title: "SpecterOps Open-Source Projects"
+  banner: "../img/specterops-banner.jpg"
   introduction: >
     At SpecterOps, we believe that we can influence our industry's maturation by contributing to the collective knowledge base. We do this by opening our ideas and hypotheses to inspection and criticism. That includes publishing our development works and contributing to the open-source community.
     
@@ -21,7 +26,7 @@ copy:
     You can read more about our commitment to transparency here: [A Push Toward Transparency](https://posts.specterops.io/a-push-toward-transparency-c385a0dd1e34)
 
   featured: >
-    The following projects are some of the larger open-source projects SpecterOps has, and continues to, sponsor and support. We hope you find them useful!
+    The following projects are some larger open-source projects SpecterOps has, and continues to, sponsor and support. We hope you find them useful!
 
   other: >
     SpecterOps employees have also created and contributed to many other projects, too numerous to list in detail here. These projects are listed below, sorted by the owner's profile.
