--- a/.github/workflows/fetch.yml
+++ b/.github/workflows/fetch.yml
@@ -15,6 +15,8 @@ env:
 
 jobs:
   fetch:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     steps:
       - name: Check out source code
