--- a/config/config.yml
+++ b/config/config.yml
@@ -248,7 +248,7 @@ featured:
     type: "red"
     img: "merlin.png"
 
-  - repo: "CrucibleC2"
+  - repo: "cruciblec2"
     type: "red"
     img: "crucible.png"
 
@@ -333,6 +333,11 @@ overrides:
 
   - repo: "powersploit"
     license: "BSD-3-Clause"
+
+  - repo: "cruciblec2"
+    name: "Crucible C2"
+    description: >
+      Crucible is an extensible, multi-user, cross-platform framework designed for post-exploitation, command and control operations, penetration testing, and red teaming. Crucible's primary objective is to streamline deployment, enhance daily usability, and facilitate extensibility development while maintaining a user-friendly interface for operators. It supports custom, robust implementations and modularization, featuring libraries that simplify client UI plugin development, comprehensive documentation on implant development, and seamless integration, testing, logging, and error-handling capabilities. Crucible supports any JSON-capable language to create secure and modular implants using a wide array of communication protocols (HTTPS, TCP, SMB, WebSockets, etc.). It also contains a custom eventing and messaging framework that powers communication between Crucible and its plugins. Crucible's modern extensibility is achieved through in-memory .NET plugins or gRPC-based plugins, enabling remote communication with external applications regardless of language, allowing extensibility that fits both the operator's skill set and needs.
 
   - repo: "empire"
     description: >
